--- a/index.html
+++ b/index.html
@@ -1,14 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizapp</title>
+    <script src="database.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="shortcut icon" href="img/icons8-quiz-60.png" type="image/x-icon">
+
+    <!-- Bootstrap file-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
+
 </head>
-<body>
+
+<body onload="init()">
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <img class="logo" src="img/logo.png" alt="">
+        </div>
+    </nav>
     
+    <div class="progress">
+        <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0%;">25%</div>
+    </div>
+    <div class="container">
+        <div id="end-screen" class="d-none">
+            <div class="end-container">
+                <img src="img/brain result.png" alt="">
+                <span id="end-text"></span>
+                <button onclick="resetQuiz()" class="btn btn-primary" onclick="">Neuer Versuch</button>
+            </div>
+        </div>
+        <div id="main-cards" class="card quiz-card">
+            <img class="img" src="img/quuiz.jpg">
+            <div class="card-body">
+                <h5 class="card-title" id="question-text">Frage</h5>
+
+
+                <div class="card quiz-answer-card mb-2" onclick="answer('1')">
+                    <div class="card-body" id="answer_1">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2 quiz-answer-card" onclick="answer('2')">
+                    <div class="card-body" id="answer_2">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card mb-2 quiz-answer-card" onclick="answer('3')">
+                    <div class="card-body" id="answer_3">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="card quiz-answer-card mb-2 " onclick="answer('4')">
+                    <div class="card-body" id="answer_4">
+                        Antwort
+                    </div>
+                </div>
+
+                <div class="question-footer">
+                    <span id="questions">
+
+                    </span>
+
+                    <button onclick="nextQuestion()" disabled id="next-btn" class="btn btn-primary">Nächste
+                        Frage</button>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
